<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SGBP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_main">Places</string>
    <string name="categories">Categories</string>
    <string name="nearby">Nearby</string>
    <string name="search_hint">Search places</string>
    <string name="search_label">Search places</string>
    <string name="search_title">Search places</string>
    <string name="menu_item_map_label">Show on map</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="app_label">SGBP</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="title_activity_search">Results</string>
    <string name="stores_empty">Sorry, no stores found</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_profile">Profile</string>
    <string name="action_about">About</string>
    <string name="notifications_empty">No notifications yet</string>
    <string name="title_activity_register">Register</string>
    <string name="action_coupons">Coupons</string>
    <string name="action_location">My location</string>
    <string name="header1">What is School Give Back Program?</string>
    <string name="body1">School Give Back Program is a non-profit organization, which distributes 100% of local business donations to participating schools.</string>
    <string name="header2">How does School Give Back Program generate donations?</string>
    <string name="body2">Local participating businesses donate monthly to School Give Back Program, through a marketing campaign.</string>
    <string name="header3">How are School Give Back Program Donations distributed?</string>
    <string name="body3">The total amount of monthly local business donations are evenly divided amongst participating schools.</string>
    <string name="header4">Is my school participating in School Giveback Program?</string>
    <string name="body4">The following schools are participating in the School Give Back Program:\n\n• Ellen Feickert Elementary\n• Markofer Elementary\n• Elk Grove Elementary\n• James McKee Elementary</string>
    <string name="header5">What can you do to make School Give Back Program a success?</string>
    <string name="body5">Shop with and support participating businesses, acknowledge their involvement; encourage your favorite businesses to join School Give Back Program.</string>
    <string name="header6">Our mission</string>
    <string name="body6">School Give Back Program’s mission is to subsidize under-funded local schools, while promoting a positive change in the education of our children.</string>
    <string name="action_save">Save</string>
    <string name="preference_notifications">Push Notifications</string>
    <string name="preference_location">Location Tracking</string>
    <string name="preference_coupons">Receive Coupons</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="email_hint">Email</string>
    <string name="school_hint">School name</string>
    <string name="grade_hint">Grade level</string>
    <string name="preference_age">I\'m over 18 years</string>
    <string name="preference_level">Multi-grade</string>
    <string name="send_button_label">Get Started</string>
    <string name="personal_info_header_label">Personal info</string>
    <string name="details_header_label">Details</string>
    <string name="prefs_header_label">Preferences</string>
    <string name="empty_field_error"> is required</string>
    <string name="action_send">Send</string>
    <string name="title_activity_detail">Details</string>
    <string name="address_header">Address</string>
    <string name="phone_header">Phone</string>
    <string name="title_activity_coupon">Coupon</string>
    <string name="action_refresh">Refresh</string>
    <string name="multigrade_dialog_title">Allow Multiple Child</string>
    <string name="multigrade_dialog_message">If you have multiple children at different grade levels, please check this box. Each grade level selected from the dropdown menu will receive credit for your participation.</string>
    <string name="notifications_dialog_title">Allow Push Notifications</string>
    <string name="notifications_dialog_message">When push notification is checked, School Give Back Program will keep you up to date and informed. We will also send you Exclusive Money Saving offers from participating businesses.</string>
    <string name="location_dialog_title">Allow App To Use Location</string>
    <string name="location_dialog_message">The Location Service is required to be checked to participate in School Give Back Program. Location Services allow us to provide map directions to participating businesses and enable auto check in features.</string>
    <string name="coupons_dialog_title">Receive Coupon Codes</string>
    <string name="coupons_dialog_message">When Receive Coupon Codes is checked, the School Give Back Program can send you great saving offers from the participating businesses. These coupon codes are only available thought the School Give Back Program.</string>
    <string name="age_dialog_message">Now please enter your First &amp; Last name</string>


</resources>
