<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingTop="16dp"
              android:paddingBottom="16dp"
              android:paddingLeft="12dp"
              android:paddingRight="12dp"
              android:background="@drawable/container">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_header_label"
        android:layout_marginBottom="8dp"
        style="?android:attr/listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/firstNameField"
        style="@style/FirstNameField"/>

    <EditText
        android:id="@+id/lastNameField"
        style="@style/LastNameField"/>

    <EditText
        android:id="@+id/emailField"
        style="@style/EmailField"/>

    <EditText
        android:id="@+id/schoolField"
        style="@style/SchoolField"/>

    <EditText
        android:id="@+id/gradeField"
        style="@style/GradeField"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prefs_header_label"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        style="?android:attr/listSeparatorTextViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp">

        <TextView
            android:text="@string/preference_age"
            style="@style/CheckBoxTextLabel"/>

        <CheckBox
            android:id="@+id/checkbox_age"
            style="@style/CheckBox"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp">

        <TextView
            android:text="@string/preference_notifications"
            style="@style/CheckBoxTextLabel"/>

        <CheckBox
            android:id="@+id/checkbox_notifications"
            style="@style/CheckBox"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp">

        <TextView
            android:text="@string/preference_location"
            style="@style/CheckBoxTextLabel"/>

        <CheckBox
            android:id="@+id/checkbox_location"
            style="@style/CheckBox"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp">

        <TextView
            android:text="@string/preference_coupons"
            style="@style/CheckBoxTextLabel"/>

        <CheckBox
            android:id="@+id/checkbox_coupons"
            style="@style/CheckBox"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp">

        <TextView
            android:text="@string/preference_level"
            style="@style/CheckBoxTextLabel"/>

        <CheckBox
            android:id="@+id/checkbox_level"
            style="@style/CheckBox"
            android:checked="false"/>

    </LinearLayout>

</LinearLayout>