<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              android:background="@color/window_background"
              tools:context="aleksey.sheyko.sgbp.ui.activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:background="@drawable/container">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Personal info"
                android:layout_marginBottom="8dp"
                style="?android:attr/listSeparatorTextViewStyle"/>

            <EditText
                android:hint="First name"
                android:id="@+id/firstNameField"
                android:inputType="textPersonName|textNoSuggestions"
                android:maxLength="32"
                style="@style/registerField"/>

            <EditText
                android:hint="Last name"
                android:id="@+id/lastNameField"
                android:inputType="textPersonName|textNoSuggestions"
                android:maxLength="32"
                style="@style/registerField"/>

            <EditText
                android:inputType="textEmailAddress"
                android:hint="Email"
                android:id="@+id/emailField"
                android:maxLength="40"
                style="@style/registerField"/>

            <EditText
                android:hint="School name"
                android:id="@+id/schoolField"
                android:inputType="textNoSuggestions"
                android:maxLength="120"
                style="@style/registerField"/>

            <EditText
                style="@style/registerField"
                android:ems="8"
                android:maxLength="12"
                android:hint="Grade level"
                android:id="@+id/classField"
                android:inputType="textNoSuggestions"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Settings"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                style="?android:attr/listSeparatorTextViewStyle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp">

                <TextView
                    android:text="@string/preference_notifications"
                    style="@style/CheckBoxTextLabel"/>

                <CheckBox
                    android:id="@+id/checkbox_notifications"
                    style="@style/CheckBox"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp">

                <TextView
                    android:text="@string/preference_location"
                    style="@style/CheckBoxTextLabel"/>

                <CheckBox
                    android:id="@+id/checkbox_location"
                    style="@style/CheckBox"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp">

                <TextView
                    android:text="@string/preference_coupons"
                    style="@style/CheckBoxTextLabel"/>

                <CheckBox
                    android:id="@+id/checkbox_coupons"
                    style="@style/CheckBox"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
