<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="#f0f4f5"
              android:orientation="vertical"
              tools:context="aleksey.sheyko.sgbp.app.activities.DetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="8dp"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/details_header"
            android:text="@string/details_header_label"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/black"
            style="?android:attr/listSeparatorTextViewStyle"/>

        <LinearLayout
            android:id="@+id/address_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:onClick="showMap">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_header"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="398 Jeyeas St, San Fransicso, CA 91234"
                    android:textColor="#66727e"
                    android:singleLine="true"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/button_map"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_map"
                android:onClick="showMap"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="#ffdce0e1" />

        <LinearLayout
            android:id="@+id/phone_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:onClick="dial"
            android:clickable="true">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_header"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="(415) 123-3221"
                    android:textColor="#66727e"
                    android:singleLine="true"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/button_phone"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_phone"
                android:onClick="dial"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
